A: installer.sh skiphash