@@ -1,1 +1,3 @@
 A: installer.sh skiphash
+A: Report 'Subscription Debts'. https://bgerp.org/change/0/doc/plugin/bil/subscription/index.html#usage-report
+
